@@ -1,5 +1,4 @@
 problem_report.py:
- - optionally load without binary data
 
 apport-gtk:
  - gnome-open does not work with Firefox if no open Firefox exists
